# BrowserLinux

./: .gitignore  .gitpod.yml  .replit  LICENSE  LICENSE.md  README.md  blpm.py  blpm_dev.py  config.phoenix  index.html  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  run.sh  vercel.json  vite.config.ts
.github/workflows/: codeql-analysis.yml
docs/: PACKAGES.md  gitpod_install_script.txt  logo.css  logo.svg.txt  todo.md
linux/: cmd.js  cmdprompt.js  files.js  filesystem.js  fonts.css  index.css  index.html  python.js  python.py  vmsh.js
public/: index.html
public/assets/: cmdprompt.js  filesystem.js  index.css  python.js  python.py  thread.js  time.js  vmsh.js
public/assets/linux/: cmdprompt.js  filesystem.js  python.js  python.py  thread.js  time.js  vmsh.js  vmsh.ts
public/info/: about.html  enablejs.html  info.css
public/lib/: brython.js
src/components/Desktop/: BootupScreen.svelte  Desktop.svelte  SystemUpdate.svelte
src/components/Dock/: Dock.svelte  DockItem.svelte  HomeButton.svelte  HomeMenu.svelte
src/components/TopBar/: ActionCenter.svelte  ActionCenterToggle.svelte  Menu.svelte  MenuBar.svelte  TopBar.svelte  TopBarTime.svelte
src/components/apps/: AppNexus.svelte
src/configs/apps/: apps-config.ts  pinned-folders.ts
src/css/: global.scss  terminal.css  theme.scss
src/helpers/: create-app-config.ts  create-menu-config.ts  pinned-folder.ts
src/stores/: apps.store.ts  menubar.store.ts  prefers-motion.store.ts  system.store.ts  theme.store.ts  wallpaper.store.ts
(+16 files in other folders)
