[tool.poetry]
name = "repl_python3_BrowserLinux"
version = "0.1.0"
description = ""
authors = ["Froggo8311 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
docutils = "^0.18.1"
Flask = "^2.0.3"
usercustomize = "^1.0.0"
pytest-browser = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
