[tool.poetry]
name = "repl_python3_BrowserLinux"
version = "0.1.0"
description = ""
authors = ["Froggo8311 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
docutils = "^0.18.1"
Flask = "^2.0.3"
usercustomize = "^1.0.0"
pytest-browser = "^0.2.0"
Sphinx = "^4.4.0"
python-ntlm = "^1.1.0"
railroad = "^0.5.0"
ipython = "^8.1.1"
lxml = "^4.8.0"
toml = "^0.10.2"
Brotli = "^1.0.9"
cryptography = "^36.0.1"
HTMLParser = "^0.0.2"
tornado = "^6.1"
keyring = "^23.5.0"
ipywidgets = "^7.6.5"
lockfile = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
